[package]
name = "fds-toolbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
rmp-serde = "1.1"
tokio = { version = "1", features = ["full"] }
async-compression = { version = "*", features = ["brotli", "tokio"] }
quinn = "0.8"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
blake3 = "1.3"
async-trait = "0.1"
dashmap = { version = "5.3", features = ["serde"] }
