[package]
name = "fds-toolbox-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fds-toolbox-core = { path = "../core" }
fds-toolbox-lazy-data = { path = "../lazy-data" }

moka = { version = "0.10", features = ["future"] }
tokio = { version = "1.27", features = ["full"] }

clap = { version = "4.2", features = ["cargo", "derive"] }
color-eyre = "0.6.2"
miette = { version = "5.7.0", features = ["fancy"] }
futures = "0.3.28"
