[package]
name = "fds-toolbox-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
tokio = { version = "1", features = ["full"] }
async-compression = { version = "0.3", features = ["brotli", "zstd", "tokio"] }
quinn = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
blake3 = "1.3"
async-trait = "0.1"
crossbeam = "0.8"
thiserror = "1.0"
tracing = "0.1"
nom = "7.1"
chrono = "0.4"
derive_more = "*"
uom = { version = "0.33", features = ["use_serde"] }
csv = "1.1"
ndarray = { version = "0.15", features = ["serde"] }
byteorder = "1.4"
# strum = "0.24.1"
# strum_macros = "0.24.3"

# [target.'cfg(loom)'.dependencies]
# loom = "0.5"