[package]
name = "fds-toolbox-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
tokio = { version = "1", features = ["full"] }
blake3 = "1.3"
async-trait = "0.1"
crossbeam = "0.8"
thiserror = "1.0"
tracing = "0.1"

# nom = "7.1"
miette = { version = "5.5.0", features = ["fancy"] }
# winnow = { version = "0.3.3", features = ["debug"] }
winnow = { version = "0.3.3", features = [] }
# ariadne = { version = "0.1" }

chrono = "0.4"
derive_more = "*"
uom = { version = "0.34", features = ["use_serde"] }
csv = "1.1"
ndarray = { version = "0.15", features = ["serde"] }
byteorder = "1.4"
futures = "0.3.27"
# strum = "0.24.1"
# strum_macros = "0.24.3"

# [target.'cfg(loom)'.dependencies]
# loom = "0.5"