[package]
name = "fds-toolbox-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
# rmp-serde = "1.1"
# blake3 = "1.3"

tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
thiserror = "1.0"
tracing = "0.1"

# nom = "7.1"
miette = { version = "5.5.0", features = ["fancy"] }
# winnow = { version = "0.4.1", features = ["debug"] }
winnow = { version = "0.4.1", features = [] }
# ariadne = { version = "0.1" }

chrono = "0.4"
derive_more = "*"
uom = { version = "0.35", features = ["use_serde"] }
csv = "1.1"
ndarray = { version = "0.15", features = ["serde"] }
byteorder = "1.4"
once_cell = "1.17.1"
# strum = "0.24.1"
# strum_macros = "0.24.3"

futures = "0.3.27"
get-size = { version = "^0.1", features = ["derive"] }
parking_lot = "0.12.1"

# [target.'cfg(loom)'.dependencies]
# loom = "0.5"