[package]
name = "fds-toolbox-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.4", features = ["canvas", "tokio"] }
iced_aw = { version = "0.2", default-features = false, features = ["tabs", "tab_bar"] }

plotters = "0.3"
plotters-iced = "0.3"

enum_dispatch = "0.3"

im = "15.1"

fds-toolbox-core = { path = "../fds-toolbox-core" }
