[package]
name = "fds-toolbox-lazy-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# plotters = "0.3"

# bicubic = "0.1"
# makima_spline = "1.1"

moka = { version = "0.11", features = ["future"] }
tokio = { version = "1", features = ["full"] }
dashmap = { version = "5.4", features = ["serde"] }
color-eyre = "0.6.2"
# parking_lot = "0.12.1"
tracing = "0.1"
async-trait = "0.1"
# async-compression = { version = "0.3", features = ["brotli", "zstd", "tokio"] }
# quinn = "0.9"
# rustls = { version = "0.21", features = ["dangerous_configuration", "quic"] }
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
# rmp-serde = "1.1"

# bytemuck = "1.13"

futures = "0.3.27"
get-size = { version = "^0.1", features = ["derive"] }
parking_lot = "0.12.1"
# dyn-eq = "0.1.2"

fds-toolbox-core = { path = "../core" }
lazy_static = "1.4.0"
enum_dispatch = "0.3.11"
derive_more = "0.99.17"
