[package]
name = "rescale-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "multipart"] }
serde = "1.0"
serde_json = "1.0"
bytes = "1.4"

# Include tokio for binary version
# TODO: Remove this dependency for library version
tokio = { version = "1.13.0", features = ["full"] }

color-eyre = "0.6.2"

# TODO: Remove or lock to cfg(test)
#       The rescale api should be independent of the actual fds toolbox
fds-toolbox-core = { path = "../core" }
