[package]
name = "fds-toolbox-ui-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.9", features = ["canvas", "tokio"] }
# Track git until they bump the version number
iced_aw = { version = "0.5", default-features = false, features = ["tabs", "tab_bar"] }

plotters = "0.3"
plotters-iced = "0.8"

# makima_spline = "1.1"
tracing = "0.1"

ndarray = "0.15"

fds-toolbox-core = { path = "../core" }
fds-toolbox-lazy-data = { path = "../lazy-data" }
