[package]
name = "fds-toolbox-ui-iced"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.9", features = ["canvas", "tokio"] }
# Track git until they bump the version number
iced_aw = { version = "0.5", default-features = false, features = ["tabs", "tab_bar", "grid"] }

plotters = "0.3"
plotters-iced = "0.8"

# makima_spline = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

ndarray = "0.15"

fds-toolbox-core = { path = "../core" }
fds-toolbox-lazy-data = { path = "../lazy-data" }
enumflags2 = "0.7"

rfd = { version = "0.11", default-features = false, features = ["xdg-portal"] }
itertools = "0.10.5"
derive_more = "0.99.17"
phf = "0.11.1"
