[package]
name = "fds-toolbox-ui-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19"
eframe = "0.19"

# We'll need our own spline library probably
# makima_spline = "1.1"

fds-toolbox-core = { path = "../../fds-toolbox-core" }