[package]
name = "slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slint = { version = "0.2", default-features = false, features = ["compat-0-2-0", "std", "backend-qt"] }
slint = "0.2"
plotters = { version = "0.3.1", default-features = false, features = ["bitmap_backend", "surface_series"] }
lazy_static = "1.4"
fds-toolbox-core = { path = "../../fds-toolbox-core" }

[build-dependencies]
slint-build = "0.2"
